app/assets/stylesheets/search.scss
.form-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;

  .search-form {
    display: grid;
    grid-template-columns: 1fr auto;
    gap: 10px;

    max-width: 600px;
    width: 100%;
    height: 40px;

    .search-input {
      border: 1px solid #d6d6d6;
      padding-left: 10px;
      padding-right: 10px;
    }

    .search-button {
      width: 80px;
      cursor: pointer;
    }
  }
}

.search-results {
  display: grid;
  gap: 20px;
  margin-top: 20px;

  .book-card {
    display: grid;
    grid-template-columns: auto 1fr;
    border-bottom: 1px solid #d6d6d6;
    padding-bottom: 20px;

    .book-image {
      display: flex;
      align-items: top;
      justify-content: center;
      width: 150px;
      height: 200px;

      img {
        // height: 200px;

        // width: auto;
        max-width: 100%;
        height: auto;
        object-fit: contain;
      }
    }

    .book-info {
      display: grid;
      gap: 10px;
      margin-left: 20px;

      .book-title {
        color: #333;
        font-size: 1.2em;
        font-weight: bold;
      }

      .book-author {
        color: #665;
        font-size: 1.1em;
        font-weight: medium;
      }

      .book-genre {
        display: grid;
        grid-template-columns: auto 1fr;
        gap: 5px;

        h4 {
          font-weight: medium;
        }
      }

      .book-description {
        display: grid;
        grid-template-rows: auto auto;
        gap: 5px;
        font-size: 0.9em;
        h4 {
          font-weight: bold;
        }
      }
    }
  }

  @media (max-width: 480px) {
    .book-description {
      display: none; /* Hide the description on mobile devices */
    }
  }
}

